@@ -1,7 +1,10 @@
 =head1 Changes in DBD-Oracle 1.28 (svn rev xxxxx)
 
-  Added connection attribute 'ora_connect_with_default_signals' that will localize Perl's $SIG{INT} handeler from Brian Phillips and T. Bunce
-  Fix in execute_array to stop possible endless loop when using a fetch sub by by Martin J. Evans 
+  Changed out note for diag in 26exe_array.t so it is compatiable with older version of test by John Scoles
+  A fix from Charles Jardine for 58object.t to stop an error on some 64 bit systems
+  A few quick changes from H. Merijn Brand to fix some compiler warings and a fix for Oracle 9 clients
+  Added connection attribute 'ora_connect_with_default_signals' that will localize Perl's $SIG{INT} handler from Brian Phillips and T. Bunce
+  Fix in execute_array to stop possible endless loop when using a fetch sub by Martin J. Evans 
   Adapted Martin J. Evans' ODBC 70execute_array.t into t/26exe_array.t by John Scoles
   Fix for execute_array to bring it up to spec. by Martin J. Evans and John Scoles
   Marked ProC, Oraperl.pm, ora_explain.pl, ora_context, ora_use_proc_connection and ora_parse_lang as deprecated  to be removed in 1.29
